--- a/app/views/home/inventory.jade
+++ b/app/views/home/inventory.jade
@@ -20,6 +20,7 @@ include home-header
 include ../modals/inv-editor
 
 script(src='/vendor/jquery.min.js')
+script(src='/socket.io/socket.io.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
 script(src='/js/home/home-header.js')
