--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,10 +2,11 @@
 - var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
 
 #orgs
-	- for (var i = 0; i < orgs.length; i++)
-		div(id=orgs[i].name)
-			p.orgName= orgs[i].name
-			- for (var k = 0; k < orgs[i].inv.length; k++)
+	- for (var i = orgs.length - 1; i >= 0; i--)
+		- var oid = orgs[i].name.replace(' ', '-');
+		div(id=oid)
+			p.orgName= capitalize(orgs[i].name)
+			- for (var k = orgs[i].inv.length - 1; k >= 0; k--)
 				- var c = orgs[i].inv[k];
 				- var cn = capitalize(c.name)
 				table(id=c.name).table.table-bordered.table-striped
@@ -20,8 +21,9 @@
 							td #{c.avail} / #{c.total}
 							- for (var j = 0; j < c.fields.length; j++)
 								td #{c.fields[j].avail} / #{c.fields[j].total}
-			hr
+		hr
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
 script(src='/js/index.js')
+script(src='/js/utils/globals.js')
