--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -16,21 +16,47 @@ html, body
 label, .subheading
 	raiseText()
 	
-// public homepage //
+// public dashboard //
 
-#orgs
-	padding 20px
-#orgs .orgName 
+#orgs .org
+	margin 20px
+	height 140px
+#orgs p
 	font-size 18px
 	font-weight bold
+#orgs .orgName 
+	float left
+	margin-right 10px
+#orgs .orgAddy
+	color #27A3FA
+#orgs hr
+	clear both
 #orgs table
 	margin 0 0 5px 0
+#orgs .service
+	float left
+	margin-right 10px
+#orgs .service .text
+	margin 0 10px 0 10px
+#orgs .service .text .name
+	float left
+#orgs .service .text .avail
+	text-align right
+#orgs .img
+	width 160px
+	height 100px
+	background-color #eee
+	border-radius 5px
+	-moz-border-radius 5px
+	-webkit-border-radius 5px
+#orgs .img img
+	margin-left 30px
 
 // account login //
 
 #login-container{
 	width 340px
-	margin 160px auto	
+	margin 160px auto
 	label{
 		margin 15px 0 5px 5px
 	}
