--- a/app/server/views/dashboard-tables.jade
+++ b/app/server/views/dashboard-tables.jade
@@ -25,5 +25,5 @@
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
-script(src='/js/index.js')
+script(src='/js/dashboard-tables.js')
 script(src='/js/utils/globals.js')
