adding header to dashboard

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -17,7 +17,13 @@ label, .subheading
 	raiseText()
 	
 // public dashboard //
-
+#btn-sign-in
+	top 1px
+	right 8px
+	width 160px	
+	position absolute	
+#orgs
+	margin-top 60px
 #orgs .org
 	margin 20px
 	height 140px
