--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -12,6 +12,15 @@ label,
   -moz-text-shadow: -1px 1px 0 #fff;
   -webkit-text-shadow: -1px 1px 0 #fff;
 }
+#btn-sign-in {
+  top: 1px;
+  right: 8px;
+  width: 160px;
+  position: absolute;
+}
+#orgs {
+  margin-top: 60px;
+}
 #orgs .org {
   margin: 20px;
   height: 140px;
