--- a/app/server/views/dashboard.jade
+++ b/app/server/views/dashboard.jade
@@ -1,6 +1,15 @@
 
 - var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
 
+div.navbar.navbar-fixed-top
+	div.navbar-inner
+		div.container-fluid
+			.nav.pull-left
+				.brand San Francisco Bridge – Public Dashboard
+			button#btn-sign-in.btn.btn-primary
+				i.icon-lock.icon-white
+				| Service Providers
+
 #orgs
 	- for (var i = orgs.length - 1; i >= 0; i--)
 		- var oid = orgs[i].name.replace(' ', '-');
