--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -195,6 +195,18 @@ label, .subheading
 #inventory .heading
 	raiseText()
 	font-size 1.4em
+#inventory .img
+	float left
+	width 160px
+	height 100px
+	background-color #fff
+	border 1px solid #ddd
+	border-radius 5px
+	margin 0 10px 10px 0	
+	-moz-border-radius 5px
+	-webkit-border-radius 5px
+#inventory img
+	margin-left 30px
 #categories
 	float left
 	height 100%
@@ -204,10 +216,8 @@ label, .subheading
 #categories .heading
 	padding 20px 0 0 0
 	text-align center
-#categories img
-	float left
-	margin 0 20px 10px 20px
-	width 160px
+#categories .img
+	margin-left 20px
 #offerings
 	height 100%	
 	width 100%
