adding about modal window to dashboard

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -17,6 +17,13 @@ label, .subheading
 	raiseText()
 	
 // public dashboard //
+#btn-about
+	top 1px
+	right 175px
+	width 40px	
+	position absolute
+#btn-about i
+	padding-left 0
 #btn-sign-in
 	top 1px
 	right 8px
