--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -12,6 +12,15 @@ label,
   -moz-text-shadow: -1px 1px 0 #fff;
   -webkit-text-shadow: -1px 1px 0 #fff;
 }
+#btn-about {
+  top: 1px;
+  right: 175px;
+  width: 40px;
+  position: absolute;
+}
+#btn-about i {
+  padding-left: 0;
+}
 #btn-sign-in {
   top: 1px;
   right: 8px;
