--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -264,6 +264,12 @@ label, .subheading
 
 .modal-form-errors li
 	color #D8000C
+.modal-alert
+	width 310px
+	margin -200px 0 0 -150px
+.modal-confirm
+	width 400px
+	margin -200px 0 0 -200px	
 	
 // generic stuff //
 img
