--- a/app/server/views/home/control-panel.jade
+++ b/app/server/views/home/control-panel.jade
@@ -38,7 +38,9 @@ include home-header
 						img(src='/img/services/'+category.name+'/'+field.name+'-right.png').slice.ir
 
 
-script(src='/vendor/jquery.min.js')
 script(src='/socket.io/socket.io.js')
+script(src='/vendor/jquery.min.js')
+script(src='/vendor/bootstrap-modal.js')
+script(src='/vendor/bootstrap-transition.js')
 script(src='/js/home/home-header.js')
 script(src='/js/home/control-panel.js')
