--- a/app/server/views/home/home-header.jade
+++ b/app/server/views/home/home-header.jade
@@ -22,4 +22,6 @@ div.navbar.navbar-fixed-top
 				| Sign Out
 	#logged-in-user-name Welcome : #{user.name}
 
+include ../modals/alert
+
 script(src='/js/utils/globals.js')
