--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -100,9 +100,9 @@ label, .subheading
 
 #signup-container{
 	width 460px
-	margin 100px auto
+	margin 100px auto	
 	#signup-page-2{
-		display hidden
+		display none
 	}
 	.well{
 		padding-bottom 5px
