--- a/app/server/views/dashboard.jade
+++ b/app/server/views/dashboard.jade
@@ -12,7 +12,7 @@ div.navbar.navbar-fixed-top
 				i.icon-lock.icon-white
 				| Service Providers
 
-#orgs
+#dashboard
 	- for (var i = orgs.length - 1; i >= 0; i--)
 		- var oid = orgs[i].name.replace(' ', '-');
 		div(id=oid).org
