--- a/app/server/views/modals/inv-editor.jade
+++ b/app/server/views/modals/inv-editor.jade
@@ -4,7 +4,7 @@
 		button.close(data-dismiss='modal') x
 		h3
 	.modal-body
-		p Please tell us how many you have of each :
+		p Please enter the total you have of each :
 		form( method="post")#inv-editor.well.span4
 			fieldset
 				label Name
