--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -262,6 +262,7 @@ label, .subheading
 #inventory #our-services .service .avail
 	text-align right
 #inventory #our-services .service i
+	cursor pointer
 	margin-right 5px
 #inventory #our-services .service img
 	margin-left 40px
