inventory updates, disabling control panel

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -256,19 +256,25 @@ label, .subheading
 	float left
 	width 180px
 	margin-left 10px
+#inventory #our-services .service .edit
+	width 28px
+	height 28px
+	cursor pointer
+	position absolute
+	top -10px
+	right -10px
+	background url('/img/icons/edit.png')
 #inventory #our-services .service .text
 	float left
 	text-align left
 #inventory #our-services .service .avail
 	text-align right
-#inventory #our-services .service i
-	cursor pointer
-	margin-right 5px
 #inventory #our-services .service img
 	margin-left 40px
 #inventory #our-services .services
-	height auto
-	overflow auto
+// need to fix this, rows not stacking correctly.. //
+	min-height 140px
+	overflow visible
 #inventory #our-services #edit-avail
 	display none
 #inventory #our-services #edit-avail .del, .add
