--- a/app/server/views/home/home-header.jade
+++ b/app/server/views/home/home-header.jade
@@ -8,11 +8,8 @@ div.navbar.navbar-fixed-top
 			ul#global-nav.nav.pull-left
 				.brand
 				li.divider-vertical
-				li
-					a(href='/control-panel') Control Panel
-				li.divider-vertical
 				li 
-					a(href='/inventory') Inventory
+					a(href='/inventory') Our Offerings
 				li.divider-vertical
 				li 
 					a(href='/account-settings') Account Settings
