--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -270,6 +270,15 @@ label,
   width: 180px;
   margin-left: 10px;
 }
+#inventory #our-services .service .edit {
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: url("/img/icons/edit.png");
+}
 #inventory #our-services .service .text {
   float: left;
   text-align: left;
@@ -277,16 +286,13 @@ label,
 #inventory #our-services .service .avail {
   text-align: right;
 }
-#inventory #our-services .service i {
-  cursor: pointer;
-  margin-right: 5px;
-}
 #inventory #our-services .service img {
   margin-left: 40px;
 }
-#inventory #our-services .services {
-  height: auto;
-  overflow: auto;
+#inventory #our-services .services,
+ {
+  min-height: 140px;
+  overflow: visible;
 }
 #inventory #our-services #edit-avail {
   display: none;
