--- a/app/server/views/home/inventory.jade
+++ b/app/server/views/home/inventory.jade
@@ -2,23 +2,32 @@
 // store data from express in hidden field for js //
 input(type='hidden', value=JSON.stringify(services))#services
 
+- var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
+
 include home-header
 
 .header-push
 	#inventory.page-container
-		#categories
-			.heading Categories
+		#all-services
+			.heading All Services
 			hr
 			- for (var i = 0; i < services.length; i++)
 				- var service = services[i].name;
-				.img
-					img(src='/img/icons/'+service+'.png', title=service, name=service)
-		#offerings
-			.wrap2
-				.heading Our Offerings
-				hr
-				.content
-
+				.service
+					.text #{capitalize(service)}
+					hr
+					.icon
+						img(src='/img/icons/'+service+'.png', title=service, name=service)
+		#our-services
+			#offset
+				#all
+					.heading Our Offerings
+					hr
+					.services
+				#edit-avail
+					.heading
+					hr
+					.services
 .footer-push
 
 include ../modals/inv-editor
