--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -167,13 +167,6 @@ label,
   right: 8px;
   position: absolute;
 }
-#inventory .heading {
-  color: #808080;
-  text-shadow: -1px 1px 0 #fff;
-  -moz-text-shadow: -1px 1px 0 #fff;
-  -webkit-text-shadow: -1px 1px 0 #fff;
-  font-size: 1.4em;
-}
 #inventory #all-services {
   float: left;
   width: 180px;
@@ -182,7 +175,6 @@ label,
   border-right: thin double #ccc;
 }
 #inventory #all-services .heading {
-  padding: 20px 0 0 0;
   text-align: center;
 }
 #inventory #our-services {
@@ -190,23 +182,23 @@ label,
   padding: 0 20px 0 20px;
 }
 #inventory #our-services .heading {
-  padding: 20px 0 0 20px;
+  padding-left: 20px;
 }
 #inventory .service {
-  color: #777;
   width: 100px;
   margin: auto;
   margin-bottom: 10px;
   padding: 10px 20px 6px 20px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  color: #777;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
 }
@@ -298,6 +290,52 @@ label,
   text-align: right;
   margin: -23px 0 0 75px;
 }
+#team {
+  width: 940px;
+  height: 100%;
+  margin: auto;
+  padding: 0 20px 0 20px;
+  text-align: center;
+}
+#team .heading {
+  padding-left: 20px;
+  text-align: left;
+}
+#team .member {
+  padding: 10px;
+  margin: 20px;
+  color: #777;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  display: inline-block;
+/* Hack for IE 6/7 */
+  *display: inline;
+  *margin: 0 20px 0 20px;
+}
+#team .member .image {
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  margin-bottom: 10px;
+  background-color: rgba(0,0,0,0.1);
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(0.25, rgba(255,255,255,0.2)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255,255,255,0.2)), color-stop(0.75, rgba(255,255,255,0.2)), color-stop(0.75, transparent), to(transparent));
+  background-image: -webkit-linear-gradient(-45deg, rgba(255,255,255,0.2) 25%, transparent 25%, transparent 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, transparent 75%, transparent);
+  background-image: -moz-linear-gradient(-45deg, rgba(255,255,255,0.2) 25%, transparent 25%, transparent 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, transparent 75%, transparent);
+  background-image: -o-linear-gradient(-45deg, rgba(255,255,255,0.2) 25%, transparent 25%, transparent 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(-45deg, rgba(255,255,255,0.2) 25%, transparent 25%, transparent 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, transparent 75%, transparent);
+  -webkit-background-size: 30px 30px;
+  -moz-background-size: 30px 30px;
+  background-size: 30px 30px;
+}
 .modal-form-errors li {
   color: #d8000c;
 }
@@ -319,12 +357,6 @@ button i {
 .form-horizontal {
   margin: 0;
 }
-.header-push {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  height: 40px;
-}
 .page-container {
   position: fixed;
   background: #eee;
@@ -332,7 +364,15 @@ button i {
   bottom: 20px;
   width: 100%;
 }
-.footer-push {
+.page-container .heading {
+  color: #808080;
+  text-shadow: -1px 1px 0 #fff;
+  -moz-text-shadow: -1px 1px 0 #fff;
+  -webkit-text-shadow: -1px 1px 0 #fff;
+  font-size: 1.4em;
+  padding: 20px 0 0 0;
+}
+.footer {
   position: fixed;
   height: 20px;
   bottom: 0;
