--- a/app/server/views/home/header.jade
+++ b/app/server/views/home/header.jade
@@ -1,7 +1,7 @@
 
-// store data from express in hidden field for js //
-input(type='hidden', value=JSON.stringify(org))#org
-
+- var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
+script
+	var ORG_DATA =!{JSON.stringify(org)}
 div.navbar.navbar-fixed-top
 	div.navbar-inner
 		div.container-fluid
@@ -9,16 +9,17 @@ div.navbar.navbar-fixed-top
 				.brand
 				li.divider-vertical
 				li 
-					a(href='/inventory') Our Offerings
+					a(href='/about-us') About Us
 				li.divider-vertical
 				li 
-					a(href='/account-settings') Account Settings
+					a(href='/offerings') Our Offerings
+				li.divider-vertical
+				li 
+					a(href='/our-team') Our Team
 				li.divider-vertical
 			button#btn-logout.btn.btn-primary
 				i.icon-lock.icon-white
 				| Sign Out
 	#logged-in-user-name Welcome : #{user.name}
-
 include ../modals/alert
-
 script(src='/js/utils/globals.js')
