bug fixes, adding clients page

--- a/app/server/views/home/about-us.jade
+++ b/app/server/views/home/about-us.jade
@@ -4,7 +4,7 @@ include header
 .page-container(style='padding-left:20px')
 	.heading About Us
 	hr
-	p Name : #{org.name}
+	p Name : #{capitalize(org.name)}
 	p Address : #{org.addy1} #{org.addy2}
 	p City : #{org.city} 
 	p State : #{org.state} 
