--- a/app/server/views/home/header.jade
+++ b/app/server/views/home/header.jade
@@ -1,25 +1,29 @@
 
+script
+	var ORG_NAME =!{JSON.stringify(oName)}
 - var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
 script
-	var ORG_DATA =!{JSON.stringify(org)}
 div.navbar.navbar-fixed-top
 	div.navbar-inner
 		div.container-fluid
 			ul#global-nav.nav.pull-left
-				.brand
+				.brand #{capitalize(oName)}
 				li.divider-vertical
-				li 
+				li
 					a(href='/about-us') About Us
 				li.divider-vertical
-				li 
+				li
 					a(href='/offerings') Our Offerings
 				li.divider-vertical
-				li 
+				li
 					a(href='/our-team') Our Team
+				li.divider-vertical
+				li
+					a(href='/clients') Our Clients
 				li.divider-vertical
 			button#btn-logout.btn.btn-primary
 				i.icon-lock.icon-white
 				| Sign Out
-	#logged-in-user-name Welcome : #{user.name}
+	#logged-in-user-name Welcome : #{capitalize(uName)}
 include ../modals/alert
 script(src='/js/utils/globals.js')
