--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -295,10 +295,6 @@ label, .subheading
 // team //
 
 #team
-	width 940px
-	height 100%
-	margin auto
-	padding 0 20px 0 20px
 	text-align center
 #team .heading
 	padding-left 20px
@@ -317,6 +313,24 @@ label, .subheading
 	margin auto
 	margin-bottom 10px
 	drawDiagonalStripes()
+
+#clients .heading
+	padding-left 20px
+// clients //
+#controls
+	position absolute
+	top 4px
+	right 140px
+#controls
+	padding 10px
+#controls .input-medium
+	width 225px
+	margin 0
+#controls #search
+	width 80px
+#controls #register
+	width 120px
+
 // alerts & errors //
 
 .modal-form-errors li
@@ -346,6 +360,11 @@ button i
 	raiseText()
 	font-size 1.4em
 	padding 20px 0 0 0
+.center-container
+	width 940px
+	height 100%
+	margin auto
+	padding 0 20px 0 20px
 .footer
 	position fixed
 	height footer_height
