--- a/app/server/views/home/our-team.jade
+++ b/app/server/views/home/our-team.jade
@@ -4,7 +4,7 @@ script
 include header
 
 .page-container
-	#team
+	#team.center-container
 		.heading Our Team
 		hr
 		- for (var i = 0; i < team.length; i++)
